# ucritair-log-analyzer

./: .gitignore  LICENSE  LOG_0.CSV  README.md  pyproject.toml  requirements.txt  sample_data_2.csv
.github/workflows/: ci.yml  release.yml
app/: app.py  main.py
app/analysis/: aqi.py  exposure.py  filters.py  ventilation.py
app/core/: config.py  logging.py  state.py
app/data/: aliases.py  dataset.py  gaps.py  importer.py  mask_rules.py
app/diagnostics/: flatline.py
app/persistence/: cache.py  project.py
app/plot/: palettes.py  plot_manager.py
app/resources/icons/: ucritter.icns
app/resources/standards/: cn_mee_aqi.yaml  eu_eea.yaml  in_cpcb_aqi.yaml  uk_defra_daqi.yaml  us_epa_2024.yaml  us_epa_legacy.yaml  who_guideline.yaml
app/resources/themes/: dark.qss  light.qss
app/ui/: main_window.py  metric_catalog.py  models.py
app/ui/tabs/: aqi.py  data_table.py  diagnostics.py  export.py  exposure.py  filters.py  import_clean.py  plot.py  ventilation.py
docs/: aqi_sources.md  user_guide.html
scripts/: build.py
tests/integration/: test_log_0.py  test_sample_data.py
tests/unit/: test_aqi.py  test_aqi_summary.py  test_aqi_world_packs.py  test_exposure_summary.py  test_filters.py  test_masks.py  test_ventilation.py
