[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ucritter-log-analyzer"
version = "0.1.0"
description = "Cross-platform desktop app for analyzing muCritAir/ucritter CSV logs"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Your Name"}]
license = {text = "MIT"}

dependencies = [
  "PySide6>=6.6",
  "pyqtgraph>=0.13",
  "pandas>=2.1",
  "numpy>=1.26",
  "scipy>=1.11",
  "pyarrow>=14",
  "orjson>=3.9",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-qt>=4.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
